styles.css
/* styles.css */
@font-face {
    font-family: 'ABeeZee';
    src: url('fonts/ABeeZee-Regular.ttf') format('truetype');
}
@font-face {
    font-family: 'Roboto';
    src: url('fonts/Roboto-Regular.ttf') format('truetype');
}
body {
    font-family: Arial, sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
    background-color: #fff;
    color: #333;
    text-align: center;
}
header {
    width: 100%;
    padding: 30px 0;
    border-bottom: 1px solid #ddd;
    position: absolute;
    top: 0;
    text-align: center;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
}
.logo {
    font-size: 30px;
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
    letter-spacing: 3px;
}
.logo span {
    color: #00C013;
}
.logo strong {
    font-weight: 300;
}
.logo a {
    text-decoration: none;
    color: inherit;
}
.subtitle {
    font-size: 14px;
    color: rgba(0, 0, 0, 0.4);
    font-family: 'ABeeZee', sans-serif;
    letter-spacing: 1.2px;
}
.content img {
    width: 100px;
    height: 100px;
}
.app-title {
    font-size: 20px;
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
    letter-spacing: 2px;
    color: rgb(0, 0, 0);
    margin-top: 10px;
}
.app-subtitle {
    font-size: 16px;
    font-family: 'Roboto', sans-serif;
    font-weight: normal;
    letter-spacing: 1px;
    color: rgba(0, 0, 0, 0.45);
}
.store-container {
    margin-top: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
.store-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}
.footer {
    width: 100%;
    padding: 10px 0;
    text-align: center;
    font-size: 15px;
    color: #666;
    position: fixed;
    bottom: 0;
    left: 0;
    border-top: 1px solid #ccc;
}
#footer-text {
    font-size: 15px;
}
@media (max-width: 600px) {
    .store-links {
        flex-direction: column;
        gap: 20px;
    }
    .footer-links {
        flex-direction: column;
        gap: 10px;
    }
    #footer-text {
        font-size: 14px;
    }
}

